# snn_multi_modal

./: GEMINI.md  pyproject.toml  train_crema_video.py
config/: neuron_factory.py
datasets/crema/: crema_audio.py  crema_video.py
jobs/kisski/video/crema/: crema_video_lr_sbatch_exp.sh
models/: audio_model.py  video_model.py
