[project]
name = "multi-modal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cupy-cuda12x>=13.6.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "timm>=1.0.19",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
]
